--- a/Run_Experiment_Unsupervised.ipynb
+++ b/Run_Experiment_Unsupervised.ipynb
@@ -1,8 +1,15 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Use this notebook to train VDSH model"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
@@ -19,13 +26,13 @@
     "data = Load_Dataset(filename)\n",
     "\n",
     "latent_dim = 32\n",
-    "sess = get_session(\"2\", 0.10)\n",
+    "sess = get_session(\"0\", 0.10) # choose the GPU and how much memory in percentage that we need\n",
     "model = VDSH(sess, latent_dim, data.n_feas)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
@@ -51,19 +58,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Epoch:25/25 11000/11016: Loss:5358.535 AvgLoss:718.255"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "total_epoch = 25\n",
     "kl_weight = 0.\n",
@@ -93,59 +92,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 11016/11016 [00:08<00:00, 1351.71it/s]\n",
-      "100%|██████████| 3668/3668 [00:02<00:00, 1423.66it/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Retrieve Top100 candidates using hamming distance\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 3668/3668 [01:25<00:00, 42.98it/s]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "Prec@K = 0.4821, Recall@K = 0.0860, NDCG@K = 0.7530\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "(0.48210741548527813, 0.085996615807716045, 0.75303811951151201)"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# run experiment here\n",
     "zTrain = model.transform(data.train)\n",
